syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.grpc.examples.lib";
option java_outer_classname = "HelloWorldProto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply){
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}


